--- a/css/style.css
+++ b/css/style.css
@@ -94,25 +94,49 @@ p {
     font-weight: bold;
     font-size: 18px;
 }
-
+.tgl-button{
+  display: none;
+}
 
 /*RESPONSIVE ZIS*/
 @media screen and (width: 768px), only screen and (-webkit-min-device-pixel-ratio: 2),(min-resolution: 192dpi) {
   body {
       font-size: 20px;
+      overflow-x: hidden;
+  }
+  /*Responsive MODAL*/
+  #checkvalues {
+
+    }
+
+  /*responsive toggle button*/
+
+  .tgl-button {
+    background-color: #c2271b !important; /* Green */
+    width: 100%;
+    height: 80px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 40px;
   }
 
 /*resposive user authentic info*/
    #user{
      width: 100%;
      /*border-bottom: solid 1px;*/
-     background-color:  #cccccc;
+     background-color:  #0D1033;
    }
 /* Dropdown menu*/
+  
    #choice_form{
+     overflow: hidden;
      width: 100%;
      /*border-bottom: solid 1px;*/
-     background-color: #d9d9d9
+     background-color: #f3aaa5;
    }
    #choice_form form {
     margin-left: 10%;
@@ -126,7 +150,7 @@ p {
   #remplir_form{
     width: 100%;
     /*border-bottom: solid 1px;*/
-    background-color: #e6e6e6;
+    background-color: #f6c0bc;
   }
   #num_items{
     width: 240px !important;
@@ -143,7 +167,7 @@ p {
 /* PRESENT DIV*/
   #present_div{
     width: 100% !important;
-    background-color: #f2f2f2;
+    background-color: #f9d5d2;
   }
 #give_border label{
   border: solid 1px;
