- changed style and display index

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,8 @@ p {
 }
 .asterisk {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 20px;
+    color: red;
 }
 .tgl-button{
   display: none;
